<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="search">Поиск</string>
    <string name="settings">Настройки</string>
    <string name="library">Медиатека</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="text_support">Написать в поддержку</string>
    <string name="user_agreement">Пользовательское соглашение</string>
    <string name="dark_theme">Темная тема</string>
    <string name="support_email_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_email_text">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="share_app_url">practicum.yandex.ru/android-developer/?from=profile_overview</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/ru/</string>
    <string name="support_email">evgeny.tomaschevitch@yandex.by</string>
    <string name="track_artwork_description">Обложка трека</string>
    <string name="track_info_separator">•</string>
    <string name="search_nothing_found">Ничего не нашлось</string>
    <string name="search_connection_problem">Проблемы со связью\n\nЗагрузка не удалась. Проверьте подключение к интернету и попробуйте ещё раз</string>
    <string name="search_refresh">Обновить</string>
    <string name="search_placeholder_description">Изображение-заглушка</string>
    <string name="search_history_title">Вы искали</string>
    <string name="search_history_clear">Очистить историю</string>

    <string name="library_favorite_tracks_tab">Избранные треки</string>
    <string name="library_playlists_tab">Плейлисты</string>
    <string name="library_empty_favorites">Ваша медиатека пуста</string>
    <string name="library_empty_playlists">Вы не создали\nни одного плейлиста</string>
    <string name="library_new_playlist">Новый плейлист</string>
    <string name="library_back_description">Назад</string>

    <string name="player_back_description">Назад</string>
    <string name="player_cover_description">Обложка альбома</string>
    <string name="player_add_to_playlist_description">Добавить в плейлист</string>
    <string name="player_play_description">Воспроизвести</string>
    <string name="player_favorite_description">Добавить в избранное</string>
    <string name="player_progress_default">00:30</string>
    <string name="player_pause_description">Пауза</string>
    <string name="player_progress_start">00:00</string>
    <string name="player_duration">Длительность</string>
    <string name="player_album">Альбом</string>
    <string name="player_year">Год</string>
    <string name="player_genre">Жанр</string>
    <string name="player_country">Страна</string>
</resources>