<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".ui.library.PlaylistsFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNewPlaylist"
        style="@style/NewPlaylistButtonStyle"
        android:layout_marginTop="@dimen/library_new_playlist_margin_top"
        android:text="@string/library_new_playlist" />

    <ImageView
        android:id="@+id/placeholderImage"
        android:layout_width="@dimen/placeholder_image_size"
        android:layout_height="@dimen/placeholder_image_size"
        android:layout_marginTop="@dimen/library_playlists_placeholder_margin_top"
        android:contentDescription="@string/search_placeholder_description"
        android:src="@drawable/ic_nothing_found"
        android:visibility="gone"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/placeholderMessage"
        style="@style/PlaceholderMessageStyle"
        android:layout_marginTop="@dimen/placeholder_text_margin_top"
        android:layout_marginHorizontal="@dimen/placeholder_text_margin_horizontal"
        android:text="@string/library_empty_playlists"
        android:visibility="gone"
        tools:visibility="visible" />

</LinearLayout>
