<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_activity_background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_56"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/btn_back"
            android:layout_width="@dimen/ib_with_48"
            android:layout_height="@dimen/ib_height_48dp"
            android:layout_margin="@dimen/ib_bar_margin_4"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_back_24"
            android:visibility="gone" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="26dp"
            android:layout_marginStart="16dp"
            android:layout_weight="1"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_22" />

        <ImageButton
            android:layout_width="@dimen/ib_with_48"
            android:layout_height="@dimen/ib_height_48dp"
            android:layout_margin="@dimen/ib_bar_margin_4"
            android:background="@android:color/transparent"
            android:gravity="center_horizontal"
            android:src="@drawable/ic_filter_24"
            android:visibility="invisible" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_search"
        style="@style/MainButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/main_btn_start"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/main_btn_end"
        android:layout_weight="1"
        android:text="@string/search"
        app:icon="@drawable/ic_search_24"
        app:iconGravity="textStart"
        app:iconPadding="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_library"
        style="@style/MainButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/main_btn_start"
        android:layout_marginTop="@dimen/main_btn_top"
        android:layout_marginEnd="@dimen/main_btn_end"
        android:layout_weight="1"
        android:text="@string/library"
        app:icon="@drawable/ic_library_24"
        app:iconGravity="textStart"
        app:iconPadding="10dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_settings"
        style="@style/MainButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/main_btn_start"
        android:layout_marginTop="@dimen/main_btn_top"
        android:layout_marginEnd="@dimen/main_btn_end"
        android:layout_marginBottom="28dp"
        android:layout_weight="1"
        android:text="@string/settings"
        app:icon="@drawable/ic_settings_24"
        app:iconGravity="textStart"
        app:iconPadding="8dp" />
</LinearLayout>