<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SearchActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bar_56"
        android:gravity="center_vertical">

        <ImageButton
            android:id="@+id/btn_back"
            style="@style/TopBarIconButtonStyle"
            android:src="@drawable/ic_arrow_back_24" />

        <TextView
            style="@style/TopBarTitleStyle"
            android:text="@string/search" />

        <ImageButton
            style="@style/TopBarIconButtonStyle"
            android:gravity="center_horizontal"
            android:src="@drawable/ic_filter_24"
            android:visibility="invisible" />
    </LinearLayout>

    <FrameLayout style="@style/SearchBarContainerStyle">

        <EditText
            android:id="@+id/searchEditText"
            style="@style/SearchBarEditTextStyle"
            android:hint="@string/search"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:singleLine="true" />

        <ImageView
            android:id="@+id/clearIcon"
            style="@style/SearchBarClearIconStyle"
            android:src="@drawable/ic_clear_16" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/tracksRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            tools:listitem="@layout/item_track" />

        <LinearLayout
            android:id="@+id/placeholderLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/placeholder_margin_top"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <ImageView
                android:id="@+id/placeholderImage"
                android:layout_width="@dimen/placeholder_image_size"
                android:layout_height="@dimen/placeholder_image_size"
                android:contentDescription="@string/search_placeholder_description"
                android:src="@drawable/ic_nothing_found" />

            <TextView
                android:id="@+id/placeholderMessage"
                style="@style/PlaceholderMessageStyle"
                android:layout_marginTop="@dimen/placeholder_text_margin_top"
                android:layout_marginHorizontal="@dimen/placeholder_text_margin_horizontal"
                tools:text="@string/search_nothing_found" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/refreshButton"
                style="@style/ActionButtonStyle"
                android:layout_marginTop="@dimen/refresh_button_margin_top"
                android:text="@string/search_refresh"
                android:visibility="gone"
                tools:visibility="visible" />
        </LinearLayout>
    </FrameLayout>

</LinearLayout>
